--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "imports-loader": "^0.6.5",
     "react": "^0.14.8 || ^15.0.0",
     "react-dom": "^0.14.8 || ^15.0.0",
+    "react-dropzone": "^3.7.3",
     "react-on-rails": "6.1.2",
     "webpack": "^1.12.14"
   },
