--- a/sample.env
+++ b/sample.env
@@ -2,3 +2,4 @@ export AWS_REGION='us-west-2'
 export S3_BUCKET_NAME='devvmh-hackinghealth'
 export AWS_ACCESS_KEY_ID='FILL ME IN'
 export AWS_SECRET_ACCESS_KEY='FILL ME IN'
+export SIGNAL_SERVER_PORT=5000
