set up signal server and fix bugs

--- a/signal-server/package.json
+++ b/signal-server/package.json
@@ -6,7 +6,7 @@
     "npm": "3.5.0"
   },
   "scripts": {
-    "run": "node index.js"
+    "serve": "node index.js"
   },
   "cacheDirectories": [
     "node_modules"
