try fixing stuff for heroku

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "npm": "3.5.0"
   },
   "scripts": {
-    "postinstall": "cd client && npm install",
+    "postinstall": "cd client && npm install && cd ../signal-server && npm install",
     "rails-server": "echo 'visit http://localhost:3000/teacher' && foreman start -f Procfile.dev",
     "test": "rspec"
   }
