--- a/sample.env
+++ b/sample.env
@@ -4,3 +4,4 @@ export AWS_ACCESS_KEY_ID='FILL ME IN'
 export AWS_SECRET_ACCESS_KEY='FILL ME IN'
 export SIGNAL_SERVER_URL='http://localhost:5000'
 export SIGNAL_SERVER_PORT=5000
+export DB='sqlite3'
