--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,9 @@ export AWS_SECRET_ACCESS_KEY='FILL ME IN'
 export SIGNAL_SERVER_URL='http://localhost:5000'
 export SIGNAL_SERVER_PORT=5000
 export DB='sqlite3'
+
+# postgres
+export DB_USERNAME=
+export DB_PASSWORD=
+export DB_PORT=
+export DB_HOST=
